resolve merge conflict

--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Login</title>
+        <title>Register</title>
         <link rel="stylesheet" href="static/css/style.css">
         <link rel="stylesheet" href="static/css/login.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +11,7 @@
     </head>
     <body id="bodyLogin">
         <div class="transparentBar">
-            <h1 class="mainHeader">Login</h1>
+            <h1 class="mainHeader">Register</h1>
         </div>
 
 
@@ -22,11 +22,14 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password">
 
-            <button type="submit" id="loginButton">Login</button>
+            <label for="password">Retype Password:</label>
+            <input type="password" id="password" name="password">
+
+            <button type="submit" id="loginButton">Register</button>
 
         </form>
 
-        <p id="registerText">Don't have an account? <a href="/register">Register here!</a></p>
+        <p id="registerText">Have an account already? <a href="/    ">Login here!</a></p>
 
     </body>
 </html>
