Created other users page

--- a/templates/gyms.html
+++ b/templates/gyms.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Homepage</title>
+        <title>Gyms</title>
         <link rel="stylesheet" href="static/css/style.css">
         <link rel="stylesheet" href="static/css/gyms.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,12 +18,12 @@
         <h2>Available Gyms:</h2>
 
         <div class="buttonPanels">
-            <a href="/workouts" class="panel">
+            <a href="/404Fitness" class="panel">
                 <button type="button">
                     <img src="/static/icons/gym.svg" class="buttonIcon"> 404 Fitness
                 </button>
             </a>
-            <a href="/food" class="panel">
+            <a href="/Palladium" class="panel">
                 <button type="button">
                     <img src="/static/icons/gym.svg" class="buttonIcon"> Palladium
                 </button>
