--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body id="bodyLogin">
 
@@ -47,6 +48,13 @@
                 </button>
             </a>
         </div>
+        
+        <a href="/">
+            <button type="button" id="logoutButton" class="btn btn-danger">
+                Logout
+            </button>
+        </a>
+        
 
 
     </body>
