--- a/templates/nutrition.html
+++ b/templates/nutrition.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Nutrition</title>
         <link rel="stylesheet" href="static/css/style.css">
-        <link rel="stylesheet" href="static/css/friends.css">
+        <link rel="stylesheet" href="static/css/nutrition.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
@@ -19,7 +19,8 @@
         <div class="buttonPanels">
             <a href="/add_meal" class="panel">
                 <button type="button">
-                    <img src="/static/icons/plus.svg" class="buttonIcon"> Add New Meal
+                    <img src="/static/icons/plus.svg" class="buttonIcon"> 
+                    <p>Add New Meal</p>
                 </button>
             </a>
             {% for meal in user_meals %}
