added dates to previous workouts

--- a/templates/workouts.html
+++ b/templates/workouts.html
@@ -26,6 +26,7 @@
                 <div class="panel">
                     <img src="/static/icons/exercise_bicycle.svg" class="buttonIcon">
                     <p>Workout: {{ workout['name'] }}</p>
+                    <p>Date: {{workout['date']}}</p>
                     <button type="button">View/Edit Workout</button>
                 </div>
                 {% else %}
