--- a/templates/friends.html
+++ b/templates/friends.html
@@ -12,7 +12,7 @@
     <body id="bodyLogin">
 
         <div class="transparentBar">
-            <h1 class="mainHeader">Other Users</h1>
+            <a href="/homepage"class="mainHeader">Other Users</a>
         </div>
 
         <h2></h2>
