--- a/templates/gyms.html
+++ b/templates/gyms.html
@@ -12,7 +12,7 @@
     <body id="bodyLogin">
 
         <div class="transparentBar">
-            <h1 class="mainHeader">Gyms</h1>
+            <a href="/homepage"class="mainHeader">Gyms</a>
         </div>
 
         <h2>Available Gyms:</h2>
