--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,8 @@
 .mainHeader {
-    text-align: center;
-    color: white;
-    margin:0px;
-    font-size:35px;
+    text-align: center !important;
+    color: white !important;
+    font-weight: bold !important;
+    font-size:35px !important;
 }
 
 #bodyLogin {
@@ -26,5 +26,6 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 8px;
+    box-sizing: border-box;
 }
 
