--- a/templates/add_workouts.html
+++ b/templates/add_workouts.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Add Meal</title>
+        <title>Add Workout</title>
         <link rel="stylesheet" href="static/css/style.css">
         <link rel="stylesheet" href="static/css/login.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,6 +28,12 @@
 
             <label for="password">Calories:</label>
             <input type="text" id="calories" name="calories">
+
+            <label for="name">Reps:</label>
+            <input type="text" id="reps" name="reps">
+
+            <label for="name">Sets:</label>
+            <input type="text" id="sets" name="sets">
 
             <label for="password">Date/Time:</label>
             <input type="text" id="date" name="date">
