--- a/templates/nutrition.html
+++ b/templates/nutrition.html
@@ -12,7 +12,7 @@
     <body id="bodyLogin">
 
         <div class="transparentBar">
-            <h1 class="mainHeader">Nutrition</h1>
+            <a href="/homepage"class="mainHeader">Nutrition</a>
         </div>
 
         <h2></h2>
