--- a/templates/friends.html
+++ b/templates/friends.html
@@ -5,6 +5,7 @@
         <title>Other Users</title>
         <link rel="stylesheet" href="static/css/style.css">
         <link rel="stylesheet" href="static/css/friends.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
@@ -18,12 +19,13 @@
         <h2></h2>
 
         <div class="searchBar">
-            <form action="{{ url_for('friends') }}" method="GET">
-                <input type="text" name="search" placeholder="Search for users..." required>
-                <button type="submit">Search</button>
+            <form action="{{ url_for('friends') }}" method="GET" class="d-flex">
+                <input type="text" name="search" placeholder="Search for users..." required class="form-control me-2"style="height: 30px; width:300px;">
+                <button type="submit" class="btn btn-primary" id="searchButton1">Search</button>
             </form>
         </div>
-    
+        
+        <!--
         <div class="buttonPanels">
             {% for user in users %}
                 <div class="panel">
@@ -37,8 +39,30 @@
                 </div>
             {% endfor %}
         </div>
-
-
+    -->
+    <div class="container mt-5">
+        <table class="table table-hover table">
+            <thead>
+                <tr>
+                    <th scope="col" colspan="2" style="text-align: center;">Username</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                    <tr style="text-align: center; justify-content: center;">
+                        <td>{{ user.username }}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary">Look at profile</button>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="2" class="text-center">No users found.</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     </body>
     
 </html>
