nutrition tab, user profile

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -41,7 +41,7 @@
                 </button>
             </a>
 
-            <a href="/profile" class="panel">
+            <a href="/my_profile" class="panel">
                 <button type="button">
                     <img src="static/icons/ui_user_profile.svg" class="buttonIcon"> My Profile
                 </button>
