--- a/templates/meal.html
+++ b/templates/meal.html
@@ -29,6 +29,9 @@
             <label for="password">Calories:</label>
             <input type="text" id="calories" name="calories">
 
+            <label for="password">Date:</label>
+            <input type="text" id="date" name="date">
+
             <label for="notes">Notes:</label>
             <input type="text" id="notes" name="notes">
 
