finished other users

--- a/templates/edit_workout.html
+++ b/templates/edit_workout.html
@@ -11,7 +11,7 @@
 </head>
     <body id="bodyLogin">
         <div class="transparentBar">
-            <h1 class="mainHeader">Edit Workout</h1>
+            <a href="/homepage"class="mainHeader">Edit Workout</a>
         </div>
 
         <form action="{{ url_for('edit_workout', workout_id=workout['_id']) }}" method="POST" id="loginBars">
