--- a/templates/add_workouts.html
+++ b/templates/add_workouts.html
@@ -12,7 +12,7 @@
     <body id="bodyLogin">
 
         <div class="transparentBar">
-            <h1 class="mainHeader">Add Workout</h1>
+            <a href="/homepage"class="mainHeader">Add a Workout</a>
         </div>
 
         {% if message %}
