--- a/templates/meal.html
+++ b/templates/meal.html
@@ -12,7 +12,7 @@
     <body id="bodyLogin">
 
         <div class="transparentBar">
-            <h1 class="mainHeader">Add Meal</h1>
+            <a href="/homepage"class="mainHeader">Add Meal</a>
         </div>
 
         {% if message %}
