--- a/templates/gyms.html
+++ b/templates/gyms.html
@@ -18,7 +18,7 @@
         <h2>Available Gyms:</h2>
 
         <div class="buttonPanels">
-            <a href="/404Fitness" class="panel">
+            <a href="/404" class="panel">
                 <button type="button">
                     <img src="/static/icons/gym.svg" class="buttonIcon"> 404 Fitness
                 </button>
@@ -26,6 +26,16 @@
             <a href="/Palladium" class="panel">
                 <button type="button">
                     <img src="/static/icons/gym.svg" class="buttonIcon"> Palladium
+                </button>
+            </a>
+            <a href="/brooklyn" class="panel">
+                <button type="button">
+                    <img src="/static/icons/gym.svg" class="buttonIcon"> Brooklyn Atheltic Facility
+                </button>
+            </a>
+            <a href="/paulson" class="panel">
+                <button type="button">
+                    <img src="/static/icons/gym.svg" class="buttonIcon"> Paulson Center
                 </button>
             </a>
         </div>
