--- a/templates/nutrition.html
+++ b/templates/nutrition.html
@@ -79,7 +79,7 @@
                     {% endfor %}
                 {% else %}
                     <tr id="notFoundText">
-                        <td colspan="6">No meals found.</td>
+                        <td colspan="6" style="text-align: center;">No meals found.</td>
                     </tr>
                 {% endif %}
             </tbody>
