--- a/static/css/gyms.css
+++ b/static/css/gyms.css
@@ -1,7 +1,7 @@
 
 .buttonPanels {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     padding: 30px;
     align-items: center;
