--- a/templates/workouts.html
+++ b/templates/workouts.html
@@ -21,7 +21,7 @@
         <div class="buttonPanels">
             <a href="/add_workouts" class="panel">
                 <button type="button">
-                    <img src="/static/icons/plus.svg" class="buttonIcon"> Add New Workout
+                    <img src="/static/icons/plus.svg" class="buttonIcon">
                 </button>
             </a>
             <!--{% for workout in workouts %}
